Fixed some registration issues, padding, alignment and facebook button

--- a/app/stylesheets/registration_page.css.sass
+++ b/app/stylesheets/registration_page.css.sass
@@ -35,7 +35,7 @@ h1
 
   #learnmore
     position: relative
-    left: 210px
+    left: 35px
 
 #main
   form
@@ -55,7 +55,6 @@ h1
 
     h4
       text-align: left
-      margin-top: 7px
       color: #FFFFFF
       font-weight: bold
       font-size: 20px
@@ -74,7 +73,7 @@ h1
     fieldset.inputs
       margin-bottom: 10px
     ol > li
-      margin: 5px 0px
+      margin: 0px 0px
       width: 360px
     label
       display: none
